name:                sartorial-server
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

executable sartorial-server
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       base      == 4.6.*,
                       sartorial == 0.1.0.0
